add properly working add_nomenclature
